--- a/hanwong/index.html
+++ b/hanwong/index.html
@@ -8,6 +8,6 @@
   <body>
     <div id="app">
     </div>
-    <script src="/dist/build.js"></script>
+    <script src="/devstudy-2017-first/hanwong/dist/build.js"></script>
   </body>
 </html>
