--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <head>
-	<title>ms-hy</title>
-</head>
-
+<title>ms-hy</title>
+<meta charset="utf-8">
+     	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+     	<meta name="description" content="">
+		<meta property="og:description" content="안녕하세요."/>
+		<meta property="og:image" content=""/>
+      	<meta name="author" content="Gremlin">
+      	<title>ms-hy</title>
+        <link rel="icon" href="images/favicon.jpg">
+        <!-- Bootstrap -->
+    	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
 <html>
 	<body>
-		<h>안녕하세요</h>	
+		<h>안녕하세요</h>
 	</body>
-</html>
+</html> 
