--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
         <link rel="icon" href="images/favicon.jpg">
         <!-- Bootstrap -->
     	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
+    	<!-- Font -->
+        <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 <html>
 	<body>
 		<h>안녕하세요</h>
+			
+		<!-- jQuery -->
+    	<!-- <script src="js/jquery-1.11.1.min.js"></script> -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    	<!-- Bootstrap -->
+    	<script src="js/bootstrap/bootstrap.js"></script>
 	</body>
 </html> 
