--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
-<head>
-<title>ms-hy</title>
-<meta charset="utf-8">
-     	<meta content="width=device-width, initial-scale=1.0" name="viewport">
-     	<meta name="description" content="">
-		<meta property="og:description" content="안녕하세요."/>
-		<meta property="og:image" content=""/>
-      	<meta name="author" content="Gremlin">
-      	<title>ms-hy</title>
-        <link rel="icon" href="images/favicon.jpg">
-        <!-- Bootstrap -->
-    	<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
-    	<!-- Font -->
-        <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Arvo:400,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-<html>
-	<body>
-		<h>안녕하세요</h>
-			
-		<!-- jQuery -->
-    	<!-- <script src="js/jquery-1.11.1.min.js"></script> -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    	<!-- Bootstrap -->
-    	<script src="js/bootstrap/bootstrap.js"></script>
-	</body>
-</html> 
+<html lang="en">
+  <head>
+      <title>ms-hy</title>
+      <meta charset="utf-8">
+     	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Bootstrap CSS-->
+  	  <link rel="stylesheet" href="/css/bootstrap/bootstrap.min.css" type="text/css" media="screen" />
+      <!-- Custom CSS-->
+      <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+  </head>
+  <body>
+      <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">Navbar</a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Disabled</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+    <!-- jQuery -->
+    <!-- <script src="js/jquery-1.11.1.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="/js/bootstrap/bootstrap.min.js"></script>
+  </body>
+</html>
