--- a/20170512/mission/index.html
+++ b/20170512/mission/index.html
@@ -66,7 +66,7 @@
           <h4>잘하는 것</h4>
           <p>인사, 필기, 구글링, 사람 얼굴 기억</p>
 
-          <h4>스터디에서 얻고 싶은 것</h4>
+          <h4>스터디에서 얻고 싶은 것!!!</h4>
           <p>MVP 만들 수 있는 개발 실력, 좋은 사람들과의 인연</p>
         </div>
 
